2013-12-17 Alexander Malysh <amalysh at kannel.org>
    * wmlscript/wsgram.y, wmlscript/wsint.h: fixed compilation error

2013-12-10  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: fix valgrind reported memory leak, when handling a failing
      DLR HTTP call in url_result_thread().
      
2013-12-10  Stipe Tolj  <stolj at kannel.org>
    * */*: cleaning up the code by removing gcc warning occurances of 
      [-Wunused-but-set-variable]. NLC.
    
2013-12-02  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: add SIGTERM handling in smsbox, otherwise the process will
      be cleanly killed, but we don't have a chance to do post-processing for
      the shutdown phase, i.e. removing pid file.
      
2013-11-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/socket.c: use POSIX function to convert to address to IP

2013-11-06 Vincent CHAVANIS <v.chavanis at telemaque.fr>
    * gw/smsc/smsc_smpp.c, gwlib/cfg.def: added support to specify our port
      when connecting an SMPP SMSC.

2013-10-17  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_soap_parlayx.c: changing namespace to use parlayx prefix
      in order to allow multi-service implementation in a single binary.
    * soap/env_[fault|header].h: using service independent SOAP header and
      fault struct processing, which is needed to support multi-services.
    * soap/env.c: dummy struct for undefined namespaces since we don't have
      them included directly from the service C sources.
    * soap/env.h: pre-processed by soapcpp2 to generate the service independent
      code base for the generic SOAP routines.
    * soap/Makefile.in: cleaning up the build process in order to allow adding
      more gsoap service implementations. Before this we got several clashes
      while building a multi-service binary.
      
2013-10-14 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: applied patch to reduce CPU load by logging.