@@ -112,7 +112,8 @@ enum {
     SMSCCONN_FAILED_MALFORMED,
     SMSCCONN_FAILED_TEMPORARILY,
     SMSCCONN_FAILED_DISCARDED,
-    SMSCCONN_FAILED_QFULL
+    SMSCCONN_FAILED_QFULL,
+    SMSCCONN_FAILED_TIMEOUT
 };
 
 
